Fix grid colours and spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -80,48 +80,61 @@
 	margin-top: -10vh;
 	min-height: 100vh;
 
+
+// Grid
+//
+//
+
 .Grid
 	display: flex
 	flex-wrap: wrap
 	margin-top: 5vh;
-	margin-left: -5px;
 
 .Grid-item
 	align-items: center
 	background:  rgb(245, 245, 245);
-	color: rgb(76, 76, 76);
+	border: 2px solid white;
 	display: flex
 	height: 40vw;
 	justify-content: center
 	width: 50%;
 
-
-
 	&:nth-child(4n+1),
 	&:nth-child(4n)
 		background: #f2ede7
 
-
-
-
 	@media (min-width: 720px)
-		width: 25%;
+		border: 5px solid white;
 		height: 250px
+		width: 25%
 
 		&:nth-child(4n+1),
-		&:nth-child(4n+3)
+		&:nth-child(4n)
+			background: rgb(245, 245, 245)
+
+		&:nth-child(8n+2),
+		&:nth-child(8n+4),
+		&:nth-child(8n+5),
+		&:nth-child(8n+7)
 			background: #f2ede7
 
+.Grid-inner
+	display: block
+	padding: 2em;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-decoration: none;
 
 .Grid-title
-	color: inherit
+	color: rgb(76, 76, 76);
 	font-size: 13px;
 	font-weight: 900;
 	letter-spacing: .1em;
 	line-height: 1.3;
-	text-decoration: none;
 	text-transform: uppercase;
-	padding: 2em;
 	position: relative
 
 	&::before
@@ -241,47 +254,47 @@
 	letter-spacing: .04em;
 	line-height: 18px;
 	text-decoration: none
-
-
-// @import "~bulma/sass/utilities/initial-variables"
 //
-// // Config vars
-// $kaldi-red: #FD461E
-// $kaldi-red-invert: #fff
 //
-// $primary: $kaldi-red
-// $primary-invert: $kaldi-red-invert
-//
-// .content .taglist
-//   list-style: none
-//   margin-bottom: 0
-//   margin-left: 0
-//   margin-right: 1.5rem
-//   margin-top: 1.5rem
-//   display: flex
-//   flex-wrap: wrap
-//   justify-content: left
-//   align-items: center
-//   li
-//     padding: 0 2rem 1rem 0
-//     margin-bottom: 1.5rem
-//     margin-top: 0
-//
-// // Helper Classes
-// .full-width-image-container
-//   width: 100vw
-//   height: 400px
-//   position: relative
-//   left: 50%
-//   right: 50%
-//   margin: 5em -50vw
-//   background-size: cover
-//   background-position: bottom
-//   display: flex
-//   justify-content: center
-//   align-items: center
-//
-// .margin-top-0
-//   margin-top: 0 !important
-//
-// @import "~bulma"
+// // @import "~bulma/sass/utilities/initial-variables"
+// //
+// // // Config vars
+// // $kaldi-red: #FD461E
+// // $kaldi-red-invert: #fff
+// //
+// // $primary: $kaldi-red
+// // $primary-invert: $kaldi-red-invert
+// //
+// // .content .taglist
+// //   list-style: none
+// //   margin-bottom: 0
+// //   margin-left: 0
+// //   margin-right: 1.5rem
+// //   margin-top: 1.5rem
+// //   display: flex
+// //   flex-wrap: wrap
+// //   justify-content: left
+// //   align-items: center
+// //   li
+// //     padding: 0 2rem 1rem 0
+// //     margin-bottom: 1.5rem
+// //     margin-top: 0
+// //
+// // // Helper Classes
+// // .full-width-image-container
+// //   width: 100vw
+// //   height: 400px
+// //   position: relative
+// //   left: 50%
+// //   right: 50%
+// //   margin: 5em -50vw
+// //   background-size: cover
+// //   background-position: bottom
+// //   display: flex
+// //   justify-content: center
+// //   align-items: center
+// //
+// // .margin-top-0
+// //   margin-top: 0 !important
+// //
+// // @import "~bulma"
